Cria envio de documentos, documentação
